--- a/style/style.scss
+++ b/style/style.scss
@@ -65,8 +65,6 @@ div.wrapper {
 }
 
 .panel {
-  font-weight: bold;
-
   padding: 0;
   margin: 0;
 
@@ -82,10 +80,6 @@ div.wrapper {
 
   h3 {
     margin: 0;
-  }
-
-  span {
-    font-weight: normal;
   }
 }
 
@@ -134,7 +128,7 @@ div.smoothie-chart-tooltip {
     flex: 0 0 calc(33% - 3px);
     margin-top: 2px;
     height: 50px;
-    line-height: 50px;
+    line-height: 50px !important;
     font-size: 2em;
     border: 1px solid gray;
   }
