--- a/style/style.scss
+++ b/style/style.scss
@@ -121,7 +121,9 @@ div.smoothie-chart-tooltip {
 
   div#tree {
     padding: 9px 14px;
-    border: 1px solid gray;
+    font-size: 1.3em;
+    text-align: center;
+    border: 3px solid gray;
   }
 
   li {
@@ -136,11 +138,19 @@ div.smoothie-chart-tooltip {
 
 #panel-gene-info {
   font-weight: normal;
-  font-family: serif;
+  font-family: sans-serif;
 
   overflow: auto;
   max-height: 200px;
 }
+
+
+#panel-gene-info2 {
+  font-family: sans-serif;
+
+  overflow: auto;
+}
+
 
 #panel-simulation-buttons {
   & > div {
