--- a/style/style.css
+++ b/style/style.css
@@ -119,6 +119,14 @@ div.smoothie-chart-tooltip {
   line-height: 40px;
   text-align: center; }
 
+#panel-simulation-buttons #restart {
+  border: 1px solid gray;
+  width: calc(100% - 2px);
+  height: 40px;
+  background-color: #890007;
+  line-height: 40px;
+  text-align: center; }
+
 #panel-gene-selection li, #panel-gene-selection div, #panel-simulation-buttons > div > div {
   cursor: pointer;
   background-color: #111111; }
