--- a/style/style.scss
+++ b/style/style.scss
@@ -166,6 +166,15 @@ div.smoothie-chart-tooltip {
     text-align: center;
   }
 
+   #restart {
+     border: 1px solid gray;
+     width:calc(100% - 2px);
+     height: 40px;
+     background-color: #890007;
+     line-height: 40px;
+     text-align: center;
+  }
+
 }
 
 #panel-gene-selection li, #panel-gene-selection div, #panel-simulation-buttons > div > div {
