--- a/style/style.scss
+++ b/style/style.scss
@@ -154,12 +154,14 @@ div.smoothie-chart-tooltip {
 
 #panel-simulation-buttons {
   & > div {
+    display: flex;
+    justify-content: space-between;
     margin-top: 4px;
   }
 
   #play, #pause, #warp, #tick {
+    flex: 0 0 48%;
     border: 1px solid gray;
-    width: calc(50% - 4px);
     height: 40px;
 
     line-height: 40px;
